<resources>
    <string name="app_name">Dostavi</string>
    <string name="app_title">Dostavi</string>
    <string name="title_activity_login">Sign in</string>

    <!-- IOU Approval -->
    <string name="iou_date">IOU Date</string>
    <string name="iou_no">IOU No</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="iou_value">IOU Value</string>
    <string name="pr_no">PR No</string>
    <string name="status">Status</string>

    <!-- IOU Items -->
    <string name="item_name">Item Name</string>
    <string name="qty">Qty</string>
    <string name="cum_qty">Cum Qty</string>
    <string name="unit_name">Unit Name</string>
    <string name="rate">Rate</string>
    <string name="last_price">Last Price</string>
    <string name="sub_total">Sub Total</string>
    <string name="item_specification">Item Specification</string>

    <!-- Custom Dialog -->
    <string name="return_string">Return</string>
    <string name="reject">Rejected</string>
    <string name="approve">Approved</string>
    <string name="remarks">Remarks</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <!-- PO Approve -->
    <string name="requisition_no">Requisition No</string>
    <string name="requisition_date">Requisition Date</string>
    <string name="procurement_person">Procurement Person</string>
    <string name="cs_no">CS NO</string>
    <string name="cs_creation_date">CS Creation Date</string>
    <string name="final_approver">Final Approver</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="requisition_entry">Requisition\nEntry</string>
    <string name="requisition_entry_label">Requisition Entry</string>
    <string name="requisition_approve_label">Requisition Approve</string>
    <string name="requisition_status_label">Requisition Status</string>
    <string name="po_approval">PO Approval</string>

    <string-array name="resuisition_status">
        <item>Draft</item>
        <item>Final</item>
    </string-array>

    <string-array name="search_type">
        <item>Select Type</item>
        <item>PR</item>
        <item>CS</item>
    </string-array>
    <string name="title_activity_login2">Sign in</string>
</resources>
